# mp3_cleaner

./: .gitignore  2019-10 - Draft.txt  Environment.py  README.md  TODO.md  __main__.py  _main.py  _main.py backup 2019-10-11  _main.py working copy prior folder view  beautify_date.py  beautify_disc_and_track_number.py  beautify_filepaths.py  beautify_multiple_filenames.py  beautify_multiple_tags.py  beautify_single_date.py  beautify_single_disc_or_track_number.py  beautify_single_disc_track_number.py  beautify_single_number.py  beautify_single_string.py  beautify_string.py  beautify_tags.py  dev_requirements.txt  environment_v2.py  input_from_volker_top_level_structure.py  mp3_tags.py  mp3_tags_bck_20200531.py  options.toml  package-list.txt  pyproject.toml  requirements.in  requirements.txt  string_beautification.py  string_capitalization.py  tag_management.py  test_beautify_date.py  test_beautify_disc_and_track_number.py  test_beautify_filenames.py  test_beautify_filepaths.py  test_beautify_numbers.py  test_beautify_string.py  (+7 more)
possibly_outdated/: beautify_filepaths.py  beautify_multiple_tags.py  beautify_single_date.py  folder_20221125.py  mp3_file_20221125.py  tag_management.py  test_beautify_date.py
src/: beautify_single_string.py  config.toml  environment.py  file.py  folder.py  folderdescription.py  foldername.py  mp3_cleaner.py  mp3_file.py  mp3file.py  mp3filename.py  mp3filetags.py  pydantic_models.py  tag_management.py  tags_model.py  tags_models.py
tests/: test_beautify_date.py  test_beautify_disc_track.py  test_beautify_filenames.py  test_beautify_filepaths.py  test_beautify_number.py  test_beautify_string.py  test_file.py  test_file_name.py  test_file_tags.py  test_filename.py  test_filetags.py  (+4 more)
(+26 files in other folders)
