# How-to update requirements.txt:
# pip install pip-tools
# pip-compile --upgrade --resolver=backtracking -o requirements.txt pyproject.toml
# Dev: pip-compile --upgrade --extra dev --resolver=backtracking -o dev_requirements.txt pyproject.toml
# pip-sync requirements.txt dev_requirements.txt


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "mp3_cleaner"
version = "1.0"
dependencies = ["mutagen", "pydantic", "regex", "tqdm"]

[project.optional-dependencies]
dev = ["black", "flake8", "isort", "pytest"]


[tool.black]
line-length = 200

[tool.isort]
profile = "black"
line_length = 200

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
